Preparing the compilation